--- a/index.html
+++ b/index.html
@@ -14,20 +14,7 @@
     <link rel="dns-prefetch" href="http://ajax.aspnetcdn.com">
     <link rel="dns-prefetch" href="http://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="http://maxcdn.bootstrapcdn.com">
-
     <!--<link rel="prefetch" href=""/>-->
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-
-    <!--<link rel="stylesheet" href="asset/css/bootstrap.min.css"/> &lt;!&ndash; CDN min &ndash;&gt;-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-    <!--<link rel="stylesheet" href="asset/css/ladda.min.css"/>-->
-    <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.css">-->
-
-    <link rel="stylesheet" href="asset/css/webface.min.css"> <!-- including ladda css -->
-
-    <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Phd Student at Texas A&amp;M </title>
-
     <script>
         var Webface = {
             status: {
@@ -65,6 +52,19 @@
         Webface.init();
     </script>
 
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+
+    <!--<link rel="stylesheet" href="asset/css/bootstrap.min.css"/> &lt;!&ndash; CDN min &ndash;&gt;-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <!--<link rel="stylesheet" href="asset/css/ladda.min.css"/>-->
+    <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.css">-->
+
+    <link rel="stylesheet" href="asset/css/webface.css">
+    <link rel="stylesheet" href="asset/css/webface.min.css"> <!-- including ladda css -->
+
+    <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Phd Student at Texas A&amp;M </title>
+
 </head>
 
 <body id="body-top" >
@@ -80,9 +80,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="col-xs-2 col-sm-1 col-md-3" href="https://parasol.tamu.edu">
+            <div>
+
+            <a href="https://www.tamu.edu" class="logo">
                 <img class="img-responsive" src="asset/img/tamu-logo-white.png">
             </a>
+
+            <a href="https://parasol.tamu.edu/groups/huangroup/" class="logo">
+                <img class="img-responsive" src="asset/img/aser.png">
+            </a>
+
+            </div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -94,15 +102,12 @@
                 <li class="page-scroll" data-menuanchor="about">
                     <a href="#about" class="i18n-txt" data-i18n-key="nav-about">About</a>
                 </li>
-
                 <li class="page-scroll" data-menuanchor="research">
                     <a href="#research" class="i18n-txt" data-i18n-key="nav-research">Research</a>
                 </li>
-
                 <li class="page-scroll" data-menuanchor="projects">
                     <a href="#projects" class="i18n-txt" data-i18n-key="nav-projects">Projects</a>
                 </li>
-
                 <li class="page-scroll" data-menuanchor="contact">
                     <a href="#contact" class="i18n-txt" data-i18n-key="nav-contact">Contact</a>
                 </li>
@@ -114,7 +119,7 @@
 </nav>
 
 
-<header id="about" class="bg-about">
+<header id="about">
     <div class="container">
         <div class="row">
             <noscript>
@@ -128,8 +133,8 @@
                 <div class="col-xs-8 col-xs-push-2 col-md-4 col-md-push-0 ">
                     <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="could not load image">
                 </div>
-                <div class="col-xs-12 col-md-push-1 col-md-7">
-                    <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai</h3>
+                <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
+                    <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
                     <p class="i18n-txt" data-i18n-key="intro-p1">First year PhD student at <a href="http://www.tamu.edu/">Texas A&amp;M University</a>, I am.</p>
                     <p class="i18n-txt" data-i18n-key="intro-p2"><a href="https://parasol.tamu.edu/people/jeff/"> Dr. Jeff Huang </a>
                         in the <a href="https://parasol.tamu.edu/groups/huangroup"> ASER Group</a>
@@ -149,7 +154,7 @@
     </div>
 </header>
 
-<section id="research">
+<section id="research"  class="bg-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -331,5 +336,4 @@
 <script type="application/javascript" src="asset/js/webface.min.js"></script> <!-- including jquery-easing, headroom, spin and ladda -->
 
 </body>
-
 </html>
