--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--<link rel="stylesheet" href="asset/css/ladda.min.css"/>-->
     <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.css">-->
 
-    <link rel="stylesheet" href="asset/css/webface.css">
+    <!--<link rel="stylesheet" href="asset/css/webface.css">-->
     <link rel="stylesheet" href="asset/css/webface.min.css"> <!-- including ladda css -->
 
     <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Phd Student at Texas A&amp;M </title>
