--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                 </div>
                 <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
                     <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
-                    <p class="i18n-txt" data-i18n-key="intro-p1">First year PhD student at <a href="http://www.tamu.edu/">Texas A&amp;M University</a>, I am.</p>
-                    <p class="i18n-txt" data-i18n-key="intro-p2"><a href="https://parasol.tamu.edu/people/jeff/"> Dr. Jeff Huang </a>
+                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at <a href="http://www.tamu.edu/">Texas A&amp;M University</a>.</p>
+                    <p class="i18n-txt" data-i18n-key="intro-p2">I work with <a href="https://parasol.tamu.edu/people/jeff/">Dr. Jeff Huang </a>
                         in the <a href="https://parasol.tamu.edu/groups/huangroup"> ASER Group</a>
-                        of the <a href="https://parasol.tamu.edu/"> Parasol Lab</a>, I work with.</p>
-                    <p class="i18n-txt" data-i18n-key="intro-p3">Program analysis and software engineering, my research interests are.</p>
+                        of the <a href="https://parasol.tamu.edu/"> Parasol Lab</a>.</p>
+                    <p class="i18n-txt" data-i18n-key="intro-p3">My research interests includes Program analysis and Software engineering.</p>
 
-                    <address class="top-buffer-20 i18n-txt" data-i18n-key="intro-addr">
+                    <address class="top-buffer-40 i18n-txt" data-i18n-key="intro-addr">
                         Tel:	<i> Website currently under construction </i><br>
                         Email:	 <i> Website currently under construction </i><br>
                         Office:	427A HRBB<br>
@@ -306,7 +306,7 @@
 
 <!-- Scroll to Top Button, Only visible on small and extra-small screen-->
 <div class="scroll-top page-scroll visible-xs visible-sm">
-    <a class="btn btn-primary" href="#body-top">
+    <a class="btn bg-navfoot" href="#body-top">
         <i class="glyphicon glyphicon-chevron-up"></i>
     </a>
 </div>
@@ -329,7 +329,7 @@
 <!--<script type="application/javascript" src="asset/js/jquery-1.11.3.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
 <script type="application/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <!--<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <!--<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
 <!--<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
