--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:site_name" content="Bowen Cai's Home Page"/>
     <meta property="og:locale" content="en_US"/>
 
-    <link rel="dns-prefetch" href="http://ajax.aspnetcdn.com">
-    <link rel="dns-prefetch" href="http://cdnjs.cloudflare.com">
-    <link rel="dns-prefetch" href="http://maxcdn.bootstrapcdn.com">
+    <link rel="dns-prefetch" href="https://ajax.aspnetcdn.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="https://maxcdn.bootstrapcdn.com">
     <!--<link rel="prefetch" href=""/>-->
     <script>
         var Webface = {
@@ -24,29 +24,31 @@
                 name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
                 var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                         results = regex.exec(location.search);
-                return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+                return results === null ? null : decodeURIComponent(results[1].replace(/\+/g, " "));
             },
             geti18nURL: function (lang) {
                 var langCode = Webface.getURLParam("lang");// iso-639
                 var areaCode = Webface.getURLParam("country"); // iso-3166
-                console.log(langCode + "  " + areaCode);
                 if (!langCode)
                     langCode = lang.substr(0, 2).toLowerCase();
                 if (!areaCode)
                     areaCode = lang.substr(3, 99).toLowerCase();
                 if (langCode == "zh" || langCode == "chi" || langCode == "zho") {
-                    if (areaCode == "cn" || areaCode == "sg" || areaCode == "chs" || areaCode == "")
-                        return "asset/i18n/zh-chs.js";
-                    else
+                    if (areaCode.indexOf("hk") != 0 || areaCode.indexOf("tw") != 0)
                         return "asset/i18n/zh-cht.js";
+                    else
+                        return "asset/i18n/zh-chs.js";
                 }
                 return null;
             },
             init : function() {
-                // 1. avoid hijacking from ISPs, namely, CMCC, China Telecom
+                // enforce https
+                if (window.location.protocol != "https:")
+                    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+                //  avoid hijacking from ISPs, namely, CMCC, China Telecom
                 if (self != top)
                     top.location = self.location;
-                // 2. jsonp for i18n pkg
+                //  jsonp for i18n pkg
                 // localLang: {}, set by jsonp
                 // the i18n files are store on CDN, not on any dynamic server.
                 var url = Webface.geti18nURL(Webface.status.lang);
@@ -66,10 +68,10 @@
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 
     <!--<link rel="stylesheet" href="asset/css/bootstrap.min.css"/> &lt;!&ndash; CDN min &ndash;&gt;-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!--<link rel="stylesheet" href="asset/css/ladda.min.css"/>-->
-    <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.css">-->
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.css">-->
 
     <!--<link rel="stylesheet" href="asset/css/webface.css">-->
     <link rel="stylesheet" href="asset/css/webface.min.css"> <!-- including ladda css -->
@@ -146,16 +148,16 @@
                 </div>
                 <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
                     <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
-                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at <a href="http://www.tamu.edu/">Texas A&amp;M University</a>.</p>
+                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at <a href="https://www.tamu.edu/">Texas A&amp;M University</a>.</p>
                     <p class="i18n-txt" data-i18n-key="intro-p2">I work with <a href="https://parasol.tamu.edu/people/jeff/">Dr. Jeff Huang </a>
                         in the <a href="https://parasol.tamu.edu/groups/huangroup"> ASER Group</a>
                         of the <a href="https://parasol.tamu.edu/"> Parasol Lab</a>.</p>
                     <p class="i18n-txt" data-i18n-key="intro-p3">My research interests includes Program analysis and Software engineering.</p>
 
                     <address class="top-buffer-40 i18n-txt" data-i18n-key="intro-addr">
-                        Tel:	<i> Website currently under construction </i><br>
-                        Email:	 <i> Website currently under construction </i><br>
-                        Office:	427A HRBB<br>
+                        Tel: &nbsp;&nbsp;&nbsp;&nbsp;<i> (979) 985-6333 </i><br>
+                        Email:&nbsp;<i> bowen.cai@tamu.edu </i><br>
+                        Office:&nbsp; 419C <a href="http://aggiemap.tamu.edu/?bldg=0353">HRBB</a> <br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         College Station, TX 77843-3112, USA
                     </address>
@@ -328,21 +330,21 @@
 </div>
 
 <!--<script type="application/javascript" src="asset/js/jquery-1.11.3.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
-<script type="application/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+<script type="application/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <!--<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
-<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <!--<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
-<!--<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
+<!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
 <!--<script type="application/javascript" src="asset/js/headroom.js"></script>-->
-<!--<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/headroom/0.7.0/headroom.min.js"></script>-->
+<!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.7.0/headroom.min.js"></script>-->
 
 <script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
 
 <!--<script type="application/javascript" src="asset/js/spin.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
 <!--<script type="application/javascript" src="asset/js/ladda.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
-<!--<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/spin.min.js"></script>-->
-<!--<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.js"></script>-->
+<!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/spin.min.js"></script>-->
+<!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.js"></script>-->
 
 <!--<script type="application/javascript" src="asset/js/webface.js"></script>-->
 <script type="application/javascript" src="asset/js/webface.min.js"></script> <!-- including jquery-easing, headroom, spin and ladda -->
