--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 i18n-txt" data-i18n-key="footer-copyright">
-                Copyright &copy; Bowen Cai 2013 - 2015
+                Copyright &copy; Bowen Cai 2013 - 2016
             </div>
         </div>
     </div>
@@ -334,20 +334,20 @@
 <!--<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
 <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-<!--<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
+<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> <!-- CDN min -->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
-<!--<script type="application/javascript" src="asset/js/headroom.js"></script>-->
+<script type="application/javascript" src="asset/js/headroom.js"></script>
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.7.0/headroom.min.js"></script>-->
 
 <script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
 
-<!--<script type="application/javascript" src="asset/js/spin.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
-<!--<script type="application/javascript" src="asset/js/ladda.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
+<script type="application/javascript" src="asset/js/spin.min.js"></script> <!-- merge -->
+<script type="application/javascript" src="asset/js/ladda.min.js"></script> <!-- merge -->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/spin.min.js"></script>-->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.js"></script>-->
 
-<!--<script type="application/javascript" src="asset/js/webface.js"></script>-->
-<script type="application/javascript" src="asset/js/webface.min.js"></script> <!-- including jquery-easing, headroom, spin and ladda -->
+<script type="application/javascript" src="asset/js/webface.js"></script>
+<!--<script type="application/javascript" src="asset/js/webface.min.js"></script> &lt;!&ndash; including jquery-easing, headroom, spin and ladda &ndash;&gt;-->
 
 </body>
 </html>
