--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             },
             init : function() {
                 // enforce https
-               // if (window.location.protocol != "https:")
-              //      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+                if (window.location.protocol != "https:")
+                    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
                 //  avoid hijacking from ISPs, namely, CMCC, China Telecom
                 if (self != top)
                     top.location = self.location;
@@ -334,20 +334,20 @@
 <!--<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
 <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> <!-- CDN min -->
+<!--<script type="application/javascript" src="asset/js/jquery.easing.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
-<script type="application/javascript" src="asset/js/headroom.js"></script>
+<!--<script type="application/javascript" src="asset/js/headroom.js"></script>-->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.7.0/headroom.min.js"></script>-->
 
 <script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
 
-<script type="application/javascript" src="asset/js/spin.min.js"></script> <!-- merge -->
-<script type="application/javascript" src="asset/js/ladda.min.js"></script> <!-- merge -->
+<!--<script type="application/javascript" src="asset/js/spin.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
+<!--<script type="application/javascript" src="asset/js/ladda.min.js"></script> &lt;!&ndash; merge &ndash;&gt;-->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/spin.min.js"></script>-->
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.js"></script>-->
 
-<script type="application/javascript" src="asset/js/webface.js"></script>
-<!--<script type="application/javascript" src="asset/js/webface.min.js"></script> &lt;!&ndash; including jquery-easing, headroom, spin and ladda &ndash;&gt;-->
+<!--<script type="application/javascript" src="asset/js/webface.js"></script>-->
+<script type="application/javascript" src="asset/js/webface.min.js"></script> <!-- including jquery-easing, headroom, spin and ladda -->
 
 </body>
 </html>
