--- a/index.html
+++ b/index.html
@@ -142,22 +142,23 @@
                     <h4> You need to enable Javascript in your browser.</h4>
                 </div>
             </noscript>
-            <div class="col-lg-12">
-                <div class="col-xs-8 col-xs-push-2 col-md-4 col-md-push-0 ">
-                    <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="could not load image">
-                </div>
                 <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
                     <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
-                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at <a href="https://www.tamu.edu/">Texas A&amp;M University</a>.</p>
-                    <p class="i18n-txt" data-i18n-key="intro-p2">I work with <a href="https://parasol.tamu.edu/people/jeff/">Dr. Jeff Huang </a>
-                        in the <a href="https://parasol.tamu.edu/groups/huangroup"> ASER Group</a>
-                        of the <a href="https://parasol.tamu.edu/"> Parasol Lab</a>.</p>
-                    <p class="i18n-txt" data-i18n-key="intro-p3">My research interests includes Program analysis and Software engineering.</p>
-
+                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at 
+                        the <a href="https://parasol.tamu.edu/groups/huangroup">ASER Group</a>,
+                        <a href="https://parasol.tamu.edu/"> Parasol Lab</a>,
+                        <a href="https://www.tamu.edu/">Texas A&amp;M University</a>.
+                        My PhD advisor is <a href="https://parasol.tamu.edu/people/jeff/">Dr. Jeff Huang </a>.
+                        </p>
+                    <p class="i18n-txt" data-i18n-key="intro-p2">I obtained my bachelor degree in Software Engineering at
+                    <a href="http://en.nwpu.edu.cn/">Northwestern Polytechical University</a> in 2015. My research interests includes Program analysis and Software engineering.</p>
                     <address class="top-buffer-40 i18n-txt" data-i18n-key="intro-addr">
                         Tel: &nbsp;&nbsp;&nbsp;&nbsp;<i> <a href="tel:+19799856333" target="_blank"> (979) 985-6333 </a></i><br>
-                        Email:&nbsp;<i> <a href='mailto:bowen.cai@tamu.edu' target='_blank'>bowen.cai@tamu.edu </a> </i><br>
-                        Office:&nbsp; 419C <a href="http://aggiemap.tamu.edu/?bldg=0353" target="_blank" rel="nofollow">HRBB</a> <br>
+                        Email:&nbsp;<i> bowen DOT cai AT tamu DOT edu </i><br>
+                        Office:&nbsp; 419C 
+                        <a href="http://aggiemap.tamu.edu/?bldg=0353" target="_blank" rel="nofollow">HRBB</a> 
+                            (<a href="https://goo.gl/maps/fRVNo5DgMGo">Google Map</a>)
+                        <br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         College Station, TX 77843-3112, USA
                     </address>
