--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
                     <h4> You need to enable Javascript in your browser.</h4>
                 </div>
             </noscript>
-                <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
+            <div class="col-lg-12">
+ -             <div class="col-xs-8 col-xs-push-2 col-md-4 col-md-push-0 ">
+ -               <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="could not load image">
+ -             </div>
+               <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
                     <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
                     <p class="i18n-txt" data-i18n-key="intro-p1"> I am a first year PhD student at 
                         the <a href="https://parasol.tamu.edu/groups/huangroup">ASER Group</a>,
