--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 }
             }
         };
-        // Webface.init();
+        Webface.init();
     </script>
 
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
