--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <img class="img-responsive" width="70%" src="asset/img/GitHub-Mark-Light-64px.png">
                 </a>
                 <a href="https://www.linkedin.com/in/bowencai" class="logo">
-                    <img class="img-responsive" width="70%" src="asset/img/Logo-2CRev-48px-TM.png">
+                    <img class="img-responsive" src="asset/img/Logo-2CRev-28px-TM.png">
                 </a>
             </div>
         </div>
