--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         the <a href="https://parasol.tamu.edu/groups/huangroup">ASER Group</a>,
                         <a href="https://parasol.tamu.edu/"> Parasol Lab</a>,
                         <a href="https://www.tamu.edu/">Texas A&amp;M University</a>. Currently I am seeking a full time
-                        software developer job. Find more information about me:
+                        software developer job starting from Jan 2018. Find more information about me:
                     <div>
                         <a href="asset/doc/resume_cs_bowen_cai.pdf" target="_blank" >
                             <img style="margin-left: 20px" src="asset/img/resume_logo_26.png">
@@ -156,7 +156,7 @@
                         </a>
 
                         <a href="https://github.com/xkommando" target="_blank">
-                            <img style="margin-left: 20px" src="asset/img/GitHub-Mark-32px.png">
+                            <img style="margin-left: 30px" src="asset/img/GitHub-Mark-32px.png">
                         </a>
                     </div>
                     </p>
